# mangit

./: CHANGELOG.md  Cargo.toml  README.md
src/: config.rs  main.rs  repository.rs  storage.rs
src/commands/: add.rs  info.rs  init.rs  list.rs  mod.rs  remove.rs  search.rs  update.rs
