[package]
name = "mangit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
shellexpand = "3.1.0"
thiserror = "2.0.11"

[profile.dev]
opt-level = 1  # Some minimal optimizations but still debug-friendly
debug = true
incremental = false

[dev-dependencies]
once_cell = "1.20.3"
tempfile = "3.17.1"
